...
                                                                <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" textContentType="email"/>
                                                                <userDefinedRuntimeAttributes>
                                                                    <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="E-mail"/>
                                                                    <userDefinedRuntimeAttribute type="string" keyPath="title" value="E-mail"/>
                                                                    <userDefinedRuntimeAttribute type="color" keyPath="errorColor">
...
                                                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                                                <userDefinedRuntimeAttributes>
                                                                    <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Senha"/>
                                                                    <userDefinedRuntimeAttribute type="string" keyPath="title" value="Senha"/>
                                                                    <userDefinedRuntimeAttribute type="color" keyPath="errorColor">
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                <state key="normal" title="Entrar">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                    <color key="titleShadowColor" name="CustomDark"/>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                <state key="normal" title="Criar uma conta">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                </state>
...
                                                                        <color key="value" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                                    </userDefinedRuntimeAttribute>
                                                                    <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Nome"/>
                                                                    <userDefinedRuntimeAttribute type="string" keyPath="title" value="Nome"/>
                                                                </userDefinedRuntimeAttributes>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="Criar nova conta">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
...
